<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_main">
        <item
            android:id="@+id/navigation_mainpg"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/navigation_listpg"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_dashboard" />

        <item
            android:id="@+id/navigation_ratepg"
            android:icon="@drawable/ic_money"
            android:title="@string/title_rate" />

        <item
            android:id="@+id/navigation_addpg"
            android:icon="@drawable/ic_settings"
            android:title="@string/title_notifications" />
    </group>
</menu>