<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/print_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_2"
            android:textSize="9pt"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_reg"
            android:textSize="5pt"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/separator"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="6dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/pdf_recId"
                    android:text="Record ID: xxx"
                    android:textSize="13dp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="6dp"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/pdf_createDate"
                    android:text="Create Date: xxx"
                    android:textSize="13dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/pdf_printDate"
                    android:text="Print Date: xxx"
                    android:textSize="13dp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:id="@+id/detail_Table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:stretchColumns="1">

            <TableRow>
                <TextView
                    android:text="Customer Information"
                    android:textStyle="bold"
                    android:layout_span="2"
                    android:textSize="16dp"
                    android:padding="4dp" />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/separator"
                    android:layout_span="2"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="Customer Name"
                    android:textSize="13dp"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/pdf_custName"
                    android:text="@string/loading"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:padding="4dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="Building Type"
                    android:textSize="13dp"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/pdf_buildType"
                    android:text="@string/loading"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:padding="4dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="Contact No"
                    android:textSize="13dp"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/pdf_contactNo"
                    android:text="@string/loading"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:padding="4dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="Full Address"
                    android:textSize="13dp"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/pdf_fullAddr"
                    android:text="@string/loading"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:padding="4dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="City"
                    android:textSize="13dp"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/pdf_city"
                    android:text="@string/loading"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:padding="4dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="Postal Code"
                    android:textSize="13dp"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/pdf_postalCode"
                    android:text="@string/loading"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:padding="4dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="State"
                    android:textSize="13dp"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/pdf_state"
                    android:text="@string/loading"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:padding="4dp" />
            </TableRow>

            <TableRow
                android:layout_marginTop="20dp">
                <TextView
                    android:text="Floor Plan Information"
                    android:textStyle="bold"
                    android:layout_span="2"
                    android:textSize="16dp"
                    android:padding="4dp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/separator"
                    android:layout_span="2"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="Area Measurement"
                    android:textSize="13dp"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/pdf_totalArea"
                    android:text="@string/loading"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:padding="4dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="Additional Calculate"
                    android:textSize="13dp"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/pdf_addCalc"
                    android:padding="4dp"
                    android:text="@string/loading"
                    android:textSize="13dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="Total Area"
                    android:textSize="13dp"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/pdf_ttlAreaInclAdd"
                    android:text="@string/loading"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:padding="4dp" />
            </TableRow>

            <TableRow
                android:layout_marginTop="20dp">
                <TextView
                    android:text="Pricing Calculation"
                    android:textStyle="bold"
                    android:layout_span="2"
                    android:textSize="16dp"
                    android:padding="4dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/separator"
                    android:layout_span="2"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/pdf_PriceList"
                    android:text="@string/loading"
                    android:textSize="13dp"
                    android:layout_span="2"
                    android:padding="4dp" />
            </TableRow>

            <TableRow
                android:layout_marginTop="20dp">
                <TextView
                    android:text="Floor Plan (Area)"
                    android:textStyle="bold"
                    android:layout_span="2"
                    android:textSize="16dp"
                    android:padding="4dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/separator"
                    android:layout_span="2"/>
            </TableRow>

            <TableRow>

                <TableLayout
                    android:id="@+id/pdf_floorAreaList"
                    android:layout_span="2"
                    android:stretchColumns="1">

                </TableLayout>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>